Java upgrade 15->16: Bypass jbehave-core errors related to JEP 396.